--- a/MitreAttackAssessmentApp/AttackAssessmentsApp/templates/home.html
+++ b/MitreAttackAssessmentApp/AttackAssessmentsApp/templates/home.html
@@ -1,1 +1,12 @@
 {% extends "navBar.html" %}
+{% block content %}
+<link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}">
+<script>
+    document.getElementById("create-new").style.display = "None";
+</script>
+<div class="create-update">
+    This page is still under construction.
+    Some dashboards will find a home here.
+    Thank you for your patience!
+</div>
+{% endblock content %}
