--- a/MitreAttackAssessmentApp/AttackAssessmentsApp/templates/login.html
+++ b/MitreAttackAssessmentApp/AttackAssessmentsApp/templates/login.html
@@ -41,7 +41,7 @@
                 {{ form.submit(class="btn btn-success") }}
             </div>
             <small>
-                <a href="#" style="color:white">Forgot Password?</a>
+                <a href="#" style="color:white">Link not live yet</a>
                 <span class="ml-3"></span><span class="ml-5">Need An Account?</span><a class="ml-2" style="color:white" href="{{ url_for('register') }}">Sign Up Now</a>
             </small>
             <div class="border-top pt-5"></div>
