--- a/MitreAttackAssessmentApp/AttackAssessmentsApp/templates/navBar.html
+++ b/MitreAttackAssessmentApp/AttackAssessmentsApp/templates/navBar.html
@@ -21,7 +21,7 @@
       <nav class="navbar navbar-expand-sm navbar-dark bg-info">
           <div style="min-width:330px">
             <a class="navbar-brand">{{title}}</a>
-          <button style="margin-bottom:5px"class="btn btn-dark btn-sm" onClick="showCreate()">Create New</button>
+          <button id="create-new" style="margin-bottom:5px"class="btn btn-dark btn-sm" onClick="showCreate()">Create New</button>
           </div>
           <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId"
               aria-expanded="false" aria-label="Toggle navigation"></button>
@@ -34,9 +34,9 @@
                       <a class="nav-link" href="{{ url_for('tactics') }}">Tactics <span class="sr-only">(current)</span></a>
                   </li>
                   <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Sub/Techniques</a>
+                    <a class="nav-link dropdown-toggle" href="" id="dropdownId" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Sub/Techniques</a>
                     <div class="dropdown-menu" aria-labelledby="dropdownId">
-                        <a class="dropdown-item" href="/techniques/all">All</a>
+                        <a class="dropdown-item" href='/techniques/all'>All</a>
                         {% for tactic in tactics %}
                         <a class="dropdown-item" href="/techniques/{{tactic}}">{{tactic}}</a>
                         {% endfor %}
@@ -49,10 +49,20 @@
                     <a class="nav-link" href="{{ url_for('malwareTools') }}">Malware / Tools <span class="sr-only">(current)</span></a>
                 </li>
               </ul>
-            <a class="nav-item active" class="text-right" style="color:white; text-decoration: none;" href="#">Log Out &nbsp;&nbsp;&nbsp;<span class="fa fa-sign-out"></span>&nbsp;&nbsp;&nbsp;<span class="sr-only">(current)</span></a>
+            <a class="nav-item active" class="text-right" style="color:white; text-decoration: none;" href="{{ url_for('logout')}}">Log Out &nbsp;&nbsp;&nbsp;<span class="fa fa-sign-out"></span>&nbsp;&nbsp;&nbsp;<span class="sr-only">(current)</span></a>
           </div>
       </nav>
-
+      <div class="col-md-8">
+        {% with messages = get_flashed_messages(with_categories=true) %}
+          {% if messages %}
+            {% for category, message in messages %}
+              <div style='left:25%'class="alert alert-{{ category }}">
+                {{ message }}
+              </div>
+            {% endfor %}
+          {% endif %}
+        {% endwith %}
+      </div>
       {% block content %}{% endblock %}
 
     <!-- Optional JavaScript -->
