--- a/MitreAttackAssessmentApp/AttackAssessmentsApp/templates/noNavBar.html
+++ b/MitreAttackAssessmentApp/AttackAssessmentsApp/templates/noNavBar.html
@@ -17,7 +17,17 @@
     {% endif %}
   </head>
   <body style="background-color: cadetblue">
-      
+    <div style="min-height: 55px;"class="col-md-8">
+      {% with messages = get_flashed_messages(with_categories=true) %}
+        {% if messages %}
+          {% for category, message in messages %}
+            <div style='left:25%'class="alert alert-{{ category }}">
+              {{ message }}
+            </div>
+          {% endfor %}
+        {% endif %}
+      {% endwith %}
+    </div>
       {% block content %}{% endblock %}
 
     <!-- Optional JavaScript -->
